--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.76.1",
+    "@uiw/react-md-editor": "^4.0.6",
     "axios": "^1.9.0",
     "json-server": "^0.17.3",
     "lucide-react": "^0.510.0",
